add sort and prev/next

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 
     <input type="text" name="subreddit" id="subreddit" value="all" />
     <!-- <input type="checkbox" name="nsfw" id="nsfw" /> -->
+    <input type="radio" id="top" name="sort" value="top" checked>
+    <label for="top">top</label><br>
+    <input type="radio" id="hot" name="sort" value="hot">
+    <label for="hot">hot</label><br>
+    <input type="radio" id="new" name="sort" value="new">
+    <label for="new">new</label>
+    <button type="button" value="" id="previous">Previous</button>
+    <button type="button" value="" id="next">Next</button>
 
     <div id="content"></div>
 
